	(handle_inferior_event): Handle TARGET_WAITKIND_NO_HISTORY.
	Handle stepping over a function call in reverse.
	Handle stepping thru a line range in reverse.
	Handle setting a step-resume breakpoint in reverse.
	Handle stepping into a function in reverse.
	Handle stepping between line ranges in reverse.
	(print_stop_reason): Print reason for NO_HISTORY.

2008-09-30  Paul Hilfinger  <hilfinger@adacore.com>

	* ada-lang.c (ada_modulus): Correct to avoid sign problem with
	moduli >= 2**31.

2008-09-30  Paul Hilfinger  <hilfinger@adacore.com>

	* ada-lang.c (ada_lookup_struct_elt_type): Handle case of a "naked"
	variant branch.
	(empty_record): Use INIT_CPLUS_SPECIFIC, since this field is not
	supposed to be null.  Fixes debugger segfaults.
	(is_unchecked_variant): New function.
	(to_fixed_variant_branch_type): Modify to leave unchecked unions
	untouched.
	(ada_template_to_fixed_record_type_1): Fix comment.

2008-09-30  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (standard_exc): New static constant.
	(ada_exception_catchpoint_cond_string): Add special handling
	for the predefined exceptions.

2008-09-30  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (ADA_RETAIN_DOTS): Delete this dead macro.  Update
	the code accordingly.

2008-09-30  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (ada_evaluate_subexp) [UNOP_IND]: Remove strange
	treatment of expect_type. Return the correct type when dereferencing
	an integer.

2008-09-30  Tom Tromey  <tromey@redhat.com>

	PR gdb/2484:
	* symtab.c (struct add_macro_name_data): New struct.
	(add_macro_name): New function.
	(default_make_symbol_completion_list): Complete macro names.
	* scm-lang.c (scm_language_defn): Update.
	* p-lang.c (pascal_language_defn): Update.
	* objc-lang.c (objc_language_defn): Update.
	* macrotab.h (macro_callback_fn): Add user_data argument.
	(macro_for_each): Likewise.
	(macro_for_each_in_scope): Declare.
	* macrotab.c: (struct macro_for_each_data): New struct.